# neuro_iot

./: CMakeLists.txt  PROJECT_STATUS.md.txt  README.md  ai_dashboard.py  server.py
llm-voice-server/llm-voice-server/: crypto.py  requirements.txt  server.py  session.py
main/: CMakeLists.txt  config.h  crypto.c  crypto.h  ds18b20_test.c  hello_world_main.c  idf_component.yml  ili9341_test.c  neuro_sentinel_main.c  ws_client.c  ws_client.h
scratch/: test_tts.py
voice-chat-server/voice-chat-server/: CLAUDE.md
voice-chat-server/voice-chat-server/server/: llm.py  main.py  requirements.txt  stt.py  tts.py
voice-chat-server/voice-chat-server/web_ui/: index.html
